--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 	<h2>beta builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=http://dl.dropboxusercontent.com/s/afld4mjxvf5pdb7/manifest.plist">Avivamiento  v 0.1</a></body>
+<a href="itms-services://?action=download-manifest&amp;url=http://dl.dropbox.com/s/afld4mjxvf5pdb7/manifest.plist">Avivamiento  v 0.1</a></body>
 
 <h2>alpha builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=http://dl.dropboxusercontent.com/s/afld4mjxvf5pdb7/manifest.plist">Avivamiento  v 0.0.15</a></body>
+<a href="itms-services://?action=download-manifest&amp;url=http://dl.dropbox.com/s/afld4mjxvf5pdb7/manifest.plist">Avivamiento  v 0.0.15</a></body>
 </body>
 </html>
