--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h2>beta builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://prodev.app/public/manifest.plist">Avivamiento  v 0.1</a></body>
+<a href="itms-services://?action=download-manifest&amp;url=https://www.dl.dropboxusercontent.com/s/afld4mjxvf5pdb7/manifest.plist">Avivamiento  v 0.1</a></body>
 
 
 </body>
